# Home-Budget

./: pyproject.toml  template.env
alembic/: env.py
alembic/versions/: 5033ab92fe56_initial.py
app/: config.py  database.py  dependencies.py  exceptions.py  main.py
app/auth/: config.py  models.py  router.py  service.py
app/category/: models.py  router.py  service.py
app/expense/: models.py  router.py  schemas.py  service.py
